--- a/Dxkotlin/app/src/main/res/layout/activity_main.xml
+++ b/Dxkotlin/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
             android:layout_below="@id/img_login"
             android:layout_width="370dp"
             android:layout_height="52dp"
-            android:hint="@string/email"
+            android:hint="@string/usuario"
             android:textColorHint="@color/black"
             android:textSize="16sp"
             android:layout_centerHorizontal="true"
@@ -57,7 +57,7 @@
             android:textColor="@color/black"
             android:id="@+id/et_email"
             android:layout_marginTop="40dp"
-            android:drawableLeft="@drawable/baseline_email_24"
+            android:drawableLeft="@drawable/icon_user_black"
             android:drawablePadding="8dp"
             android:padding="5dp"
 
