--- a/Dxkotlin/app/src/main/res/layout/card_vaga.xml
+++ b/Dxkotlin/app/src/main/res/layout/card_vaga.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ViewModel.CardVaga">
+    android:layout_height="match_parent">
 
 
     <RelativeLayout
@@ -23,8 +21,7 @@
             android:id="@+id/img_logo_empresa"
             android:layout_width="170dp"
             android:layout_height="158dp"
-            android:layout_margin="16dp"
-            android:background="@mipmap/empresa_logo1"></ImageView>
+            android:layout_margin="16dp"></ImageView>
 
 
         <TextView
@@ -36,7 +33,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:layout_toRightOf="@id/img_logo_empresa"
-            android:text="Desenvolvedor iOS"
+
             android:textColor="@color/vagas_text_color"
             android:textSize="22dp"
             android:textStyle="bold"></TextView>
@@ -47,7 +44,6 @@
             android:layout_below="@id/txt_titulo_da_vaga"
             android:layout_marginLeft="16dp"
             android:layout_toRightOf="@id/img_logo_empresa"
-            android:text="Descrição da vaga:"
             android:textColor="@color/vagas_text_color"
             android:textSize="16dp"
             android:id="@+id/txt_descricao_vaga"
@@ -64,7 +60,7 @@
             android:layout_marginTop="45dp"
             android:layout_marginLeft="24dp"
             android:padding="8dp"
-            android:textSize="14dp"
+            android:textSize="16dp"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:backgroundTint="@color/btn_candidatar"
@@ -80,7 +76,7 @@
             android:layout_toRightOf="@id/btn_candidatar_se"
             android:layout_marginTop="45dp"
             android:padding="8dp"
-            android:textSize="14dp"
+            android:textSize="16dp"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:backgroundTint="@color/btn_cancelar"
@@ -92,4 +88,4 @@
     </RelativeLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
