--- a/Dxkotlin/app/src/main/res/layout/fragment_dados.xml
+++ b/Dxkotlin/app/src/main/res/layout/fragment_dados.xml
@@ -41,11 +41,12 @@
             android:textSize="28sp"
             android:layout_marginTop="18dp"
             android:id="@+id/txt_cpf"
-            android:textColor="@color/black"
+            android:textColor="#2D0C57"
             android:layout_below="@id/txt_nome"
             android:layout_marginLeft="20dp"
 
             ></TextView>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -103,6 +104,7 @@
             android:layout_marginTop="36dp"
             android:layout_alignLeft="@+id/img_icon_home"
             android:layout_marginLeft="45dp"
+            android:textSize="16dp"
             ></TextView>
 
 
@@ -179,6 +181,28 @@
             android:layout_alignBaseline="@+id/txt_usuario"
             android:layout_alignParentEnd="true"
             android:layout_marginRight="25dp"
+            ></TextView>
+
+        <TextView
+            android:id="@+id/img_icon_user_name"
+            android:layout_below="@id/txt_usuario"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:background="@mipmap/icon_user_name"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="32dp"
+            ></TextView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="15sp"
+            android:layout_marginTop="18dp"
+            android:textColor="#9586A8"
+            android:layout_alignBaseline="@+id/img_icon_user_name"
+            android:layout_marginLeft="55dp"
+            android:id="@+id/txt_nome_atual"
             ></TextView>
 
 
