--- a/Dxkotlin/app/src/main/res/layout/card_vaga.xml
+++ b/Dxkotlin/app/src/main/res/layout/card_vaga.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    app:cardElevation="5dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+   >
+
 
 
     <RelativeLayout
         android:id="@+id/card_vaga"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="250dp"
             android:background="@color/roxo_padrao"
             android:id="@+id/img_card"
             ></ImageView>
@@ -21,7 +26,10 @@
             android:id="@+id/img_logo_empresa"
             android:layout_width="170dp"
             android:layout_height="158dp"
-            android:layout_margin="16dp"></ImageView>
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"></ImageView>
 
 
         <TextView
@@ -88,4 +96,4 @@
     </RelativeLayout>
 
 
-</FrameLayout>
+</androidx.cardview.widget.CardView>
