--- a/Dxkotlin/app/src/main/res/layout/fragment_vagas.xml
+++ b/Dxkotlin/app/src/main/res/layout/fragment_vagas.xml
@@ -55,50 +55,13 @@
             android:id="@+id/btn_publicar_vaga"
             ></ImageView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:layout_below="@id/searchView"
-            android:layout_marginTop="109dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:id="@+id/linear_btns"
-            >
 
-            <Button
-                android:id="@+id/btn_cadastro"
-                android:layout_width="139dp"
-                android:layout_height="54dp"
-                android:layout_centerHorizontal="true"
-                android:layout_margin="10dp"
-                android:background="@drawable/rounded_button"
-                android:drawableLeft="@drawable/baseline_check_24"
-                android:padding="16dp"
-                android:text="Mobile"
-                android:textAllCaps="false"
-                android:textColor="@color/btn_vagas_selected"
-                android:textSize="16sp" />
-
-            <Button
-                android:layout_width="139dp"
-                android:layout_height="54dp"
-                android:layout_centerHorizontal="true"
-                android:layout_margin="10dp"
-                android:background="@drawable/rounded_button"
-                android:drawableLeft="@drawable/baseline_check_24"
-                android:padding="16dp"
-                android:text="Mobile"
-                android:textAllCaps="false"
-                android:textColor="@color/btn_vagas_selected"
-                android:textSize="16sp" />
-
-        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_vagas"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/linear_btns"
+            android:layout_below="@id/btn_publicar_vaga"
             />
 
 
