--- a/Dxkotlin/app/src/main/res/layout/fragment_vagas.xml
+++ b/Dxkotlin/app/src/main/res/layout/fragment_vagas.xml
@@ -34,7 +34,9 @@
             android:textAllCaps="false"
             android:layout_alignParentEnd="true"
             android:textColor="@color/btn_vagas_selected"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:onClick="showDialog"
+            />
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchView"
@@ -46,6 +48,7 @@
             android:background="@drawable/rounded_searchview"
             android:elevation="4dp"
             />
+
         <ImageView
             android:layout_width="234dp"
             android:layout_height="234dp"
