--- a/Dxkotlin/app/src/main/res/values/themes.xml
+++ b/Dxkotlin/app/src/main/res/values/themes.xml
@@ -21,4 +21,9 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/slide_in_bottom</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_bottom</item>
+        ></style>
+
 </resources>
