--- a/Dxkotlin/app/src/main/res/layout/fragment_vagas.xml
+++ b/Dxkotlin/app/src/main/res/layout/fragment_vagas.xml
@@ -8,7 +8,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        >
 
         <TextView
             android:layout_width="wrap_content"
@@ -63,8 +65,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_vagas"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/btn_publicar_vaga"
+            android:layout_marginBottom="60dp"
             />
 
 
