--- a/Dxkotlin/app/src/main/res/drawable/border_radius_card_empresa.xml
+++ b/Dxkotlin/app/src/main/res/drawable/border_radius_card_empresa.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#F0F1F2"/>
+    <solid android:color="@color/roxo_padrao"/>
     <stroke
         android:width="2dp"
-        android:color="@color/white"
+        android:color="#D9D0E3"
         />
 
-    <corners android:radius="8dp" />
+    <corners   android:topLeftRadius="8dp"
+        android:topRightRadius="8dp"/>
 </shape>
