--- a/Dxkotlin/app/src/main/res/values/themes.xml
+++ b/Dxkotlin/app/src/main/res/values/themes.xml
@@ -24,6 +24,21 @@
     <style name="DialogAnimation">
         <item name="android:windowEnterAnimation">@anim/slide_in_bottom</item>
         <item name="android:windowExitAnimation">@anim/slide_out_bottom</item>
-        ></style>
+        >
+    </style>
+
+    <style name="FullscreenTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="RadioButtonTheme">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:buttonTint">@color/roxo_padrao</item>
+    </style>
+
+    <style name="FullscreenTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="FullscreenTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
