--- a/Dxkotlin/app/src/main/res/layout/card_vaga.xml
+++ b/Dxkotlin/app/src/main/res/layout/card_vaga.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     app:cardElevation="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-   >
+    tools:context=".VagasFragment">
 
 
 
