--- a/Dxkotlin/app/src/main/res/layout/card_vaga.xml
+++ b/Dxkotlin/app/src/main/res/layout/card_vaga.xml
@@ -99,6 +99,7 @@
             android:layout_height="wrap_content"
             android:text="Cancelar"
             android:background="@drawable/rounded_edittext"
+            android:id="@+id/btn_cancelar"
             android:layout_below="@id/txt_descricao_vaga"
             android:layout_toRightOf="@id/btn_candidatar_se"
             android:layout_marginTop="45dp"
