--- a/Dxkotlin/app/src/main/res/layout/card_empresa.xml
+++ b/Dxkotlin/app/src/main/res/layout/card_empresa.xml
@@ -78,6 +78,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
+            android:backgroundTint="@color/white"
             android:background="@drawable/rounded_edittext"
             ></ImageView>
 
@@ -104,7 +105,7 @@
             android:layout_toRightOf="@id/img_logo_empresa"
             android:textColor="@color/vagas_text_color"
             android:textSize="16dp"
-            android:id="@+id/txt_senioridade"
+            android:id="@+id/txt_sobreNos"
             android:text="Sobre nós:"
             android:textStyle="bold"
             ></TextView>
@@ -112,7 +113,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/txt_senioridade"
+            android:layout_below="@id/txt_sobreNos"
             android:layout_marginLeft="16dp"
             android:layout_toRightOf="@id/img_logo_empresa"
             android:layout_marginTop="32dp"
